[metadata]
name = smartexecutorlib
version = attr: smartexecutorlib.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Smart executors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smartexecutorlib/
project_urls =
    Documentation = https://github.com/smartlegionlab/smartexecutorlib/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smartexecutorlib/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    executor
    executors
    command executor
    smartlegionlab

[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =